# gimei-rust

./: Cargo.toml  README.md
data/: addresses.toml  names.toml
src/: address.rs  gender.rs  japanese.rs  lib.rs  name.rs  samplable.rs
src/address/: mod.rs
src/data/: addresses.toml
src/name/: mod.rs
tests/: tests.rs
