[package]
name = "gimei"
version = "0.1.0"
authors = ["Kentaro Takiguchi <takiguchi0817@gmail.com>"]
licence = "MIT"
readme = "README.md"
repository = "https://github.com/rejasupotaro/gimei-rust"
homepage = "https://github.com/rejasupotaro/gimei-rust"
documentation = "http://doc.rust-lang.org/gimei"
description = """
Random Japanese name and address generator (Port of gem's gimei to Rust).
"""
include = ["Cargo.toml", "src/*", "data/*"]

[lib]
name = "gimei"
path = "src/lib.rs"

[dependencies]
toml = "*"
rustc-serialize = "*"
rand = "*"
lazy_static = "*"
